5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1764_2390.log
== TEST (2019-05-28 13:37:37) 
-- CODE:
from numpy import*
fre = array(eval(input("Informe ")))

maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:37:56) 
-- CODE:
from numpy import*
fre = array(eval(input("Informe ")))

maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.44617
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:04:54) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(1,11,12,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:05:19) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,10,11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:05:27) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,11,11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:05:43) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:07:38) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,11,num=11)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:08:00) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:08:21) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,1,11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:08:30) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,3,11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:08:35) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,12,11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:08:50) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,11,11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:08:58) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = linspace(0,10,11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:10:59) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = arange(11,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:11:08) 
-- CODE:
from numpy import*

#frequencia = array(eval(input("Informe a frequencia: ")))

mes = arange(12,dtype=int)

#maior_fre = max(fre)

i = 0
#while(i < size(fre)):
#	if(fre[i] == maior_fre):
#		mes = i + 1
#	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:16:27) 
-- CODE:
from numpy import*

frequencia = array(eval(input("Informe a frequencia: ")))

mes = arange(12,dtype=int)

#mes = 

print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:16:37) 
-- CODE:
from numpy import*

frequencia = array(eval(input("Informe a frequencia: ")))

mes = arange(12,dtype=int)

#mes = 

print(mes)
-- EXECUTION TIME:
0.541077
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11]
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:36:06) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.15827
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:42) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:43) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:43) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:43) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:44) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:44) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:45) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:45) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:46) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:46) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:47) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:47) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:48) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:48) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: "))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:37:39) 
-- CODE:
from numpy import*
fre = array(eval(input("Frequentes: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.414816
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:38:10) 
-- CODE:
from numpy import*

fre = array(eval(input("Frequentes: ")))

maior_fre = max(fre)

i = 0
while(i < size(fre)):
	
	if(fre[i] == maior_fre):
		mes = i + 1
	
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.452311
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
